    'protein' selection (#2751 PR #2755)
  * Added an RDKit converter that works for any input with all hydrogens
    explicit in the topology (Issue #2468, PR #2775)
  * Added `TransformationBase`. Implemented threadlimit and add an attribute for
    checking if it can be used in parallel analysis. (Issue #2996, PR #2950)

Changes
  * `contacts.Contacts` now stores data using the `Contacts.results.timeseries`
    attribute. `Contacts.timeseries` is now deprecated (Issue #3261)
  * `DensityAnalysis` now uses the `results.density` attribute for storing
    data. The `DensityAnalysis.density` attribute is now deprecated
    (Issue #3261)
  * Deprecated analysis.hbonds.hbond_analysis has been removed in favour of
    analysis.hydrogenbonds.hbond_analysis (Issues #2739, #2746)
  * `GNMAnalysis`, `LinearDensity`, `PersistenceLength` and
    `AnalysisFromFunction` use the `results` attribute.
  * Fixed inaccurate docstring inside the RMSD class (Issue #2796, PR #3134) 
  * TPRParser now loads TPR files with `tpr_resid_from_one=True` by default,
    which starts TPR resid indexing from 1 (instead of 0 as in 1.x) (Issue #2364, PR #3152)
  * Introduces encore specific C compiler arguments to allow for lowering of
    optimisations on non-x86 platforms (Issue #1389, PR #3149)
  * Continuous integration uses mamba rather than conda to install the
    dependencies (PR #2983)
  * removes deprecated `as_Universe` function from MDAnalysis.core.universe,
    as a result :class:`MDAnalysis.analysis.leaflet.LeafletFinder` now only
    accepts Universes for its `universe` argument (Issue #2920)
  * deprecated Python escape sequence usage has been fixed in our test suite,
    and the test suite will now raise an error for this usage of `\` (PR #2885)
  * deprecated NumPy type aliases have been replaced with their actual types
    (see upstream NumPy PR 14882), and our pytest configuration will raise an
    error for any violation when testing with development NumPy builds